@@ -28,8 +28,8 @@ $string['enabled'] = 'Feedback Poodll';
 $string['enabled_help'] = 'If enabled, the marker can leave audio/video feedback for each submission. ';
 $string['pluginname'] = 'Feedback PoodLL';
 $string['recordertype'] = 'PoodLL Recorder Type';
-$string['replymp3voice'] = 'MP3 Voice Recorder';
-$string['replyvoice'] = 'Voice Recorder (Red5)';
+$string['replymp3voice'] = 'Audio recorder';
+$string['replyvoice'] = 'Voice Recorder (Red5)'; //defunct .. can be removed
 $string['replyvideo'] = 'Video Recorder';
 $string['replywhiteboard'] = 'Whiteboard';
 $string['replysnapshot'] = 'Snapshot';
